--- a/JavaScript/operadores/Atividade-07.html
+++ b/JavaScript/operadores/Atividade-07.html
@@ -58,7 +58,7 @@
                 break;
 
             case 12:
-                document.write('Dezembro<br><img src="image/papai noel.jpg" alt=""><br>Feliz natal');
+                document.write('Dezembro<br><img src="image/papai-noel.jpg" alt=""><br>Feliz natal');
                 break;
 
         default: 
