--- a/JavaScript/operadores/atividade_013.html
+++ b/JavaScript/operadores/atividade_013.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
 
+</head>
 <body>
+
     <script>
 
-for (let image = 0; image <= 1000; image++){
+        for (let image = 0; image <= 1000; image++){
             console.log(image);
-            document.write("<img src='image/sp.jpg' alt='' width='100' height='150'> " );
+            document.write("<img src='imagem/martin_garrix.webp' alt='' width='100' height='150'> " );
         }
-
-      
-
 
     </script>
 </body>
-
 </html>
